# dice52

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  go.mod  rfc-dice52-pq-protocol.md
benches/: benchmarks.rs
clients/golang/cmd/dice52/: main.go
clients/golang/pkg/dice52/: handshake.go  kdf.go  session.go  types.go
clients/java/: Makefile  README.md  pom.xml
clients/java/src/main/java/io/dice52/: Constants.java  Crypto.java  Demo.java  Dice52Exception.java  Handshake.java  Kdf.java  Session.java  Types.java
clients/java/src/test/java/io/dice52/: SessionTest.java
clients/python3/: Makefile  README.md  pyproject.toml  requirements.txt
clients/python3/dice52/: __init__.py  crypto.py  demo.py  error.py  handshake.py  kdf.py  session.py  types.py
clients/python3/tests/: __init__.py  test_session.py
clients/rust/: Cargo.toml
clients/rust/src/: error.rs  handshake.rs  kdf.rs  lib.rs  session.rs  types.rs
cmd/dice52/: main.go
pkg/dice52/: crypto.go  handshake.go  kdf.go  ko_enhancement_test.go  session.go  types.go
src/: crypto.rs  error.rs  handshake.rs  kdf.rs  lib.rs  session.rs  types.rs
